nebulastream/nes-coordinator/src/Parsers/NebulaPSL/gen/NesCEPParser.cpp

// Generated from nebulastream/nes-coordinator/src/Parsers/NebulaPSL/gen/NesCEP.g4 by ANTLR 4.9.2

#include <Parsers/NebulaPSL/gen/NesCEPListener.h>
#include <Parsers/NebulaPSL/gen/NesCEPParser.h>

using namespace antlrcpp;
using namespace NES::Parsers;
using namespace antlr4;

NesCEPParser::NesCEPParser(TokenStream* input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NesCEPParser::~NesCEPParser() { delete _interpreter; }

std::string NesCEPParser::getGrammarFileName() const { return "NesCEP.g4"; }

const std::vector<std::string>& NesCEPParser::getRuleNames() const { return _ruleNames; }

dfa::Vocabulary& NesCEPParser::getVocabulary() const { return _vocabulary; }

//----------------- QueryContext ------------------------------------------------------------------

NesCEPParser::QueryContext::QueryContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::QueryContext::EOF() { return getToken(NesCEPParser::EOF, 0); }

std::vector<NesCEPParser::CepPatternContext*> NesCEPParser::QueryContext::cepPattern() {
    return getRuleContexts<NesCEPParser::CepPatternContext>();
}

NesCEPParser::CepPatternContext* NesCEPParser::QueryContext::cepPattern(size_t i) {
    return getRuleContext<NesCEPParser::CepPatternContext>(i);
}

size_t NesCEPParser::QueryContext::getRuleIndex() const { return NesCEPParser::RuleQuery; }

void NesCEPParser::QueryContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterQuery(this);
}

void NesCEPParser::QueryContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitQuery(this);
}

NesCEPParser::QueryContext* NesCEPParser::query() {
    QueryContext* _localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
    enterRule(_localctx, 0, NesCEPParser::RuleQuery);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(107);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(106);
            cepPattern();
            setState(109);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while (_la == NesCEPParser::PATTERN);
        setState(111);
        match(NesCEPParser::EOF);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- CepPatternContext ------------------------------------------------------------------

NesCEPParser::CepPatternContext::CepPatternContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::CepPatternContext::PATTERN() { return getToken(NesCEPParser::PATTERN, 0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::NAME() { return getToken(NesCEPParser::NAME, 0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::SEP() { return getToken(NesCEPParser::SEP, 0); }

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::CepPatternContext::compositeEventExpressions() {
    return getRuleContext<NesCEPParser::CompositeEventExpressionsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::FROM() { return getToken(NesCEPParser::FROM, 0); }

std::vector<NesCEPParser::InputStreamsContext*> NesCEPParser::CepPatternContext::inputStreams() {
    return getRuleContexts<NesCEPParser::InputStreamsContext>();
}

NesCEPParser::InputStreamsContext* NesCEPParser::CepPatternContext::inputStreams(size_t i) {
    return getRuleContext<NesCEPParser::InputStreamsContext>(i);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::INTO() { return getToken(NesCEPParser::INTO, 0); }

NesCEPParser::SinkListContext* NesCEPParser::CepPatternContext::sinkList() {
    return getRuleContext<NesCEPParser::SinkListContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WHERE() { return getToken(NesCEPParser::WHERE, 0); }

NesCEPParser::WhereExpContext* NesCEPParser::CepPatternContext::whereExp() {
    return getRuleContext<NesCEPParser::WhereExpContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WITHIN() { return getToken(NesCEPParser::WITHIN, 0); }

NesCEPParser::WindowConstraintsContext* NesCEPParser::CepPatternContext::windowConstraints() {
    return getRuleContext<NesCEPParser::WindowConstraintsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::CONSUMING() { return getToken(NesCEPParser::CONSUMING, 0); }

NesCEPParser::OptionContext* NesCEPParser::CepPatternContext::option() { return getRuleContext<NesCEPParser::OptionContext>(0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::SELECT() { return getToken(NesCEPParser::SELECT, 0); }

NesCEPParser::OutputExpressionContext* NesCEPParser::CepPatternContext::outputExpression() {
    return getRuleContext<NesCEPParser::OutputExpressionContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::ORDER() { return getToken(NesCEPParser::ORDER, 0); }

size_t NesCEPParser::CepPatternContext::getRuleIndex() const { return NesCEPParser::RuleCepPattern; }

void NesCEPParser::CepPatternContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterCepPattern(this);
}

void NesCEPParser::CepPatternContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitCepPattern(this);
}

NesCEPParser::CepPatternContext* NesCEPParser::cepPattern() {
    CepPatternContext* _localctx = _tracker.createInstance<CepPatternContext>(_ctx, getState());
    enterRule(_localctx, 2, NesCEPParser::RuleCepPattern);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(113);
        match(NesCEPParser::PATTERN);
        setState(114);
        match(NesCEPParser::NAME);
        setState(115);
        match(NesCEPParser::SEP);
        setState(116);
        compositeEventExpressions();
        setState(117);
        match(NesCEPParser::FROM);
        setState(118);
        inputStreams();
        setState(121);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::WHERE) {
            setState(119);
            match(NesCEPParser::WHERE);
            setState(120);
            whereExp();
        }
        setState(125);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::WITHIN) {
            setState(123);
            match(NesCEPParser::WITHIN);
            setState(124);
            windowConstraints();
        }
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::CONSUMING) {
            setState(127);
            match(NesCEPParser::CONSUMING);
            setState(128);
            option();
        }
        setState(133);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::SELECT) {
            setState(131);
            match(NesCEPParser::SELECT);
            setState(132);
            outputExpression();
        }
        setState(135);
        match(NesCEPParser::INTO);
        setState(136);
        sinkList();
        setState(139);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::ORDER) {
            setState(137);
            match(NesCEPParser::ORDER);
            setState(138);
            inputStreams();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- InputStreamsContext ------------------------------------------------------------------

NesCEPParser::InputStreamsContext::InputStreamsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<NesCEPParser::InputStreamContext*> NesCEPParser::InputStreamsContext::inputStream() {
    return getRuleContexts<NesCEPParser::InputStreamContext>();
}

NesCEPParser::InputStreamContext* NesCEPParser::InputStreamsContext::inputStream(size_t i) {
    return getRuleContext<NesCEPParser::InputStreamContext>(i);
}

std::vector<tree::TerminalNode*> NesCEPParser::InputStreamsContext::COMMA() { return getTokens(NesCEPParser::COMMA); }

tree::TerminalNode* NesCEPParser::InputStreamsContext::COMMA(size_t i) { return getToken(NesCEPParser::COMMA, i); }

size_t NesCEPParser::InputStreamsContext::getRuleIndex() const { return NesCEPParser::RuleInputStreams; }

void NesCEPParser::InputStreamsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterInputStreams(this);
}

void NesCEPParser::InputStreamsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitInputStreams(this);
}

NesCEPParser::InputStreamsContext* NesCEPParser::inputStreams() {
    InputStreamsContext* _localctx = _tracker.createInstance<InputStreamsContext>(_ctx, getState());
    enterRule(_localctx, 4, NesCEPParser::RuleInputStreams);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(141);
        inputStream();
        setState(146);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == NesCEPParser::COMMA) {
            setState(142);
            match(NesCEPParser::COMMA);
            setState(143);
            inputStream();
            setState(148);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- InputStreamContext ------------------------------------------------------------------

NesCEPParser::InputStreamContext::InputStreamContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode*> NesCEPParser::InputStreamContext::NAME() { return getTokens(NesCEPParser::NAME); }

tree::TerminalNode* NesCEPParser::InputStreamContext::NAME(size_t i) { return getToken(NesCEPParser::NAME, i); }

tree::TerminalNode* NesCEPParser::InputStreamContext::AS() { return getToken(NesCEPParser::AS, 0); }

size_t NesCEPParser::InputStreamContext::getRuleIndex() const { return NesCEPParser::RuleInputStream; }

void NesCEPParser::InputStreamContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterInputStream(this);
}

void NesCEPParser::InputStreamContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitInputStream(this);
}

NesCEPParser::InputStreamContext* NesCEPParser::inputStream() {
    InputStreamContext* _localctx = _tracker.createInstance<InputStreamContext>(_ctx, getState());
    enterRule(_localctx, 6, NesCEPParser::RuleInputStream);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(149);
        match(NesCEPParser::NAME);
        setState(152);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::AS) {
            setState(150);
            match(NesCEPParser::AS);
            setState(151);
            match(NesCEPParser::NAME);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- CompositeEventExpressionsContext ------------------------------------------------------------------

NesCEPParser::CompositeEventExpressionsContext::CompositeEventExpressionsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

NesCEPParser::ListEventsContext* NesCEPParser::CompositeEventExpressionsContext::listEvents() {
    return getRuleContext<NesCEPParser::ListEventsContext>(0);
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::LPARENTHESIS() {
    return getToken(NesCEPParser::LPARENTHESIS, 0);
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::RPARENTHESIS() {
    return getToken(NesCEPParser::RPARENTHESIS, 0);
}

size_t NesCEPParser::CompositeEventExpressionsContext::getRuleIndex() const {
    return NesCEPParser::RuleCompositeEventExpressions;
}

void NesCEPParser::CompositeEventExpressionsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterCompositeEventExpressions(this);
}

void NesCEPParser::CompositeEventExpressionsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitCompositeEventExpressions(this);
}

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::compositeEventExpressions() {
    CompositeEventExpressionsContext* _localctx = _tracker.createInstance<CompositeEventExpressionsContext>(_ctx, getState());
    enterRule(_localctx, 8, NesCEPParser::RuleCompositeEventExpressions);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(155);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
            case 1: {
                setState(154);
                match(NesCEPParser::LPARENTHESIS);
                break;
            }

            default: break;
        }
        setState(157);
        listEvents();
        setState(159);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::RPARENTHESIS) {
            setState(158);
            match(NesCEPParser::RPARENTHESIS);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- WhereExpContext ------------------------------------------------------------------

NesCEPParser::WhereExpContext::WhereExpContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

NesCEPParser::ExpressionContext* NesCEPParser::WhereExpContext::expression() {
    return getRuleContext<NesCEPParser::ExpressionContext>(0);
}

size_t NesCEPParser::WhereExpContext::getRuleIndex() const { return NesCEPParser::RuleWhereExp; }

void NesCEPParser::WhereExpContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterWhereExp(this);
}

void NesCEPParser::WhereExpContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitWhereExp(this);
}

NesCEPParser::WhereExpContext* NesCEPParser::whereExp() {
    WhereExpContext* _localctx = _tracker.createInstance<WhereExpContext>(_ctx, getState());
    enterRule(_localctx, 10, NesCEPParser::RuleWhereExp);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(161);
        expression(0);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- WindowConstraintsContext ------------------------------------------------------------------

NesCEPParser::WindowConstraintsContext::WindowConstraintsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

NesCEPParser::WindowTypeContext* NesCEPParser::WindowConstraintsContext::windowType() {
    return getRuleContext<NesCEPParser::WindowTypeContext>(0);
}

tree::TerminalNode* NesCEPParser::WindowConstraintsContext::LBRACKET() { return getToken(NesCEPParser::LBRACKET, 0); }

NesCEPParser::TimeConstraintsContext* NesCEPParser::WindowConstraintsContext::timeConstraints() {
    return getRuleContext<NesCEPParser::TimeConstraintsContext>(0);
}

tree::TerminalNode* NesCEPParser::WindowConstraintsContext::RBRACKET() { return getToken(NesCEPParser::RBRACKET, 0); }

size_t NesCEPParser::WindowConstraintsContext::getRuleIndex() const { return NesCEPParser::RuleWindowConstraints; }

void NesCEPParser::WindowConstraintsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterWindowConstraints(this);
}

void NesCEPParser::WindowConstraintsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitWindowConstraints(this);
}

NesCEPParser::WindowConstraintsContext* NesCEPParser::windowConstraints() {
    WindowConstraintsContext* _localctx = _tracker.createInstance<WindowConstraintsContext>(_ctx, getState());
    enterRule(_localctx, 12, NesCEPParser::RuleWindowConstraints);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(163);
        windowType();
        setState(164);
        match(NesCEPParser::LBRACKET);
        setState(165);
        timeConstraints();
        setState(166);
        match(NesCEPParser::RBRACKET);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- WindowTypeContext ------------------------------------------------------------------

NesCEPParser::WindowTypeContext::WindowTypeContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t NesCEPParser::WindowTypeContext::getRuleIndex() const { return NesCEPParser::RuleWindowType; }

void NesCEPParser::WindowTypeContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterWindowType(this);
}

void NesCEPParser::WindowTypeContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitWindowType(this);
}

NesCEPParser::WindowTypeContext* NesCEPParser::windowType() {
    WindowTypeContext* _localctx = _tracker.createInstance<WindowTypeContext>(_ctx, getState());
    enterRule(_localctx, 14, NesCEPParser::RuleWindowType);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(168);
        _la = _input->LA(1);
        if (!((((_la & ~0x3fULL) == 0)
               && ((1ULL << _la) & ((1ULL << NesCEPParser::T__0) | (1ULL << NesCEPParser::T__1) | (1ULL << NesCEPParser::T__2)))
                   != 0))) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- TimeConstraintsContext ------------------------------------------------------------------

NesCEPParser::TimeConstraintsContext::TimeConstraintsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::NAME() { return getToken(NesCEPParser::NAME, 0); }

std::vector<tree::TerminalNode*> NesCEPParser::TimeConstraintsContext::COMMA() { return getTokens(NesCEPParser::COMMA); }

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::COMMA(size_t i) { return getToken(NesCEPParser::COMMA, i); }

std::vector<NesCEPParser::ConstraintContext*> NesCEPParser::TimeConstraintsContext::constraint() {
    return getRuleContexts<NesCEPParser::ConstraintContext>();
}

NesCEPParser::ConstraintContext* NesCEPParser::TimeConstraintsContext::constraint(size_t i) {
    return getRuleContext<NesCEPParser::ConstraintContext>(i);
}

std::vector<NesCEPParser::IntervalContext*> NesCEPParser::TimeConstraintsContext::interval() {
    return getRuleContexts<NesCEPParser::IntervalContext>();
}

NesCEPParser::IntervalContext* NesCEPParser::TimeConstraintsContext::interval(size_t i) {
    return getRuleContext<NesCEPParser::IntervalContext>(i);
}

size_t NesCEPParser::TimeConstraintsContext::getRuleIndex() const { return NesCEPParser::RuleTimeConstraints; }

void NesCEPParser::TimeConstraintsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTimeConstraints(this);
}

void NesCEPParser::TimeConstraintsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTimeConstraints(this);
}

NesCEPParser::TimeConstraintsContext* NesCEPParser::timeConstraints() {
    TimeConstraintsContext* _localctx = _tracker.createInstance<TimeConstraintsContext>(_ctx, getState());
    enterRule(_localctx, 16, NesCEPParser::RuleTimeConstraints);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(170);
        match(NesCEPParser::NAME);
        setState(171);
        match(NesCEPParser::COMMA);
        setState(172);
        constraint();
        setState(173);
        interval();
        setState(180);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == NesCEPParser::COMMA) {
            setState(174);
            match(NesCEPParser::COMMA);
            setState(175);
            constraint();
            setState(176);
            interval();
            setState(182);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstraintContext ------------------------------------------------------------------

NesCEPParser::ConstraintContext::ConstraintContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t NesCEPParser::ConstraintContext::getRuleIndex() const { return NesCEPParser::RuleConstraint; }

void NesCEPParser::ConstraintContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterConstraint(this);
}

void NesCEPParser::ConstraintContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitConstraint(this);
}
